successfully created new project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=GroceryStore
+spring.datasource.username=postgres
+spring.datasource.password=11111111
+spring.datasource.url=jdbc:postgresql://localhost:5432/GroceryProduct_DB
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
